--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>abi</li>
-    <li>studium Bioinfo</li>
+    <li>Abitur</li>
+    <li>study Bioinformatics</li>
   </ul>
   <hr>
 
@@ -40,11 +40,11 @@
     </thead>
     <tr>
       <td>2016-2020</td>
-      <td>Bioinfo at IPB</td>
+      <td>Bioinformatic research at IPB</td>
     </tr>
     <tr>
       <td>2020</td>
-      <td>study at MLU</td>
+      <td>study at MLU Halle</td>
     </tr>
   </table>
   <hr>
