--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <td>
         <h1>Tobias Herr</h1>
         <p><em>Hi its <strong>me</strong></em></p>
-        <p>I am an Bioinfo an love cinematography</p>
+        <p>I am an Bioinformatic researcher and lover of cinematography</p>
       </td>
     </tr>
   </table>
